@@ -1,9 +1,11 @@
 2015-10-22  Julien Bect  <julien.bect@centralesupelec.fr>
 
-	@stk_hrect/ismember.m: Fix a bug
+	@stk_hrect/ismember.m: Fix two bugs
 
 	* arrays/@stk_hrect/ismember.m: Fix a bug that prevented ismember
-	from working on more than one point at a time.
+	from working on more than one point at a time, and another bug
+	in the case where B is not an stk_hrect object (it was incorrectly
+	assumed to be an stk_dataframe in this case).
 
 2015-10-11  Julien Bect  <julien.bect@centralesupelec.fr>
 
